<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_favorite_white_48dp"
            android:title="@string/home"
           />
        <item
            android:id="@+id/drawer_accepted"
            android:icon="@drawable/ic_stars_white_48dp"
            android:title="@string/accepted"
            />
        <item
            android:id="@+id/drawer_sales"
            android:icon="@drawable/ic_add_shopping_cart_white_48dp"
            android:title="@string/sales"
            />
        <item
            android:id="@+id/drawer_music"
            android:title="@string/music"

            android:icon="@drawable/ic_music_note_white_48dp"/>

    </group>
    <item android:title="@string/navigation_view_subtitle">

        <menu>

            <item
                android:id="@+id/drawer_setting"
                android:icon="@drawable/ic_settings_white_48dp"
                android:title="@string/setting"
              />

            <item
                android:id="@+id/drawer_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_exit_to_app_white_48dp"
                />

        </menu>
    </item>

</menu>