<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_title"
        android:textSize="10pt"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/feedback_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedback_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/feedback_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedback_email"
        android:inputType="textEmailAddress" />

    <Spinner
        android:id="@+id/feedback_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/feed_type_list"
        android:prompt="@string/feedback_prompt" />

    <EditText
        android:id="@+id/feedback_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedback_body"
        android:inputType="textMultiLine"
        android:lines="5"
        android:background="@drawable/edit_text_selector"/>

    <CheckBox
        android:id="@+id/CheckBox_response"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_response" />

    <Button
        android:id="@+id/Button_sendFeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="sendFeedback"
        android:text="@string/feedback_button"
        android:background="@color/ColorPrimary"/>
</LinearLayout>