<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/girl"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/md_white_1000"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal" />
    <!--QQ登录成功后的用户头像-->
    <ImageView
        android:id="@+id/user_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerInParent="true"
        android:contentDescription="@string/user_logo"
        android:src="@drawable/ic_account_circle_white_48dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_logo"
        android:hint="@string/login_username_prompt"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_username"
        android:hint="@string/login_password_prompt"
        android:inputType="textPassword"
        android:maxLines="1" />

    <!--正常登录按钮-->

    <!--QQ登录按钮-->

    <TextView android:id="@+id/to_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_prompt"
        android:gravity="center"
        android:textSize="16sp"

        android:layout_marginTop="98dp" />

    <Button
        android:id="@+id/qqLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/ColorPrimary"
        android:onClick="qqLogin"
        android:text="@string/qq_login"
        android:textColor="@color/abc_primary_text_disable_only_material_dark" />

    <Button
        android:id="@+id/normalLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_light"
        android:onClick="normalLogin"
        android:text="@string/normal_login"
        android:textColor="@color/abc_primary_text_disable_only_material_dark" />


</LinearLayout>