<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/girl2">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_username_prompt"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_prompt"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email_prompt"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <com.github.glomadrian.materialanimatedswitch.MaterialAnimatedSwitch xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/email_input"
        app:ball_press_color="@color/md_white_1000"
        app:ball_release_color="@color/md_light_blue_900"
        app:base_press_color="@color/md_deep_orange_50"
        app:base_release_color="@color/md_light_blue_A700"
        app:icon_press="@drawable/ic_lock_open_white_36dp"
        app:icon_release="@drawable/ic_lock_outline_white_36dp" />

    <Button
        android:id="@+id/user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin"
        android:background="@color/ColorPrimary"
        android:text="@string/register"
        android:textColor="@color/md_white_1000" />
    <Button
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_register"
        android:background="@color/accent_material_light"
        android:text="@string/login"
        android:textColor="@color/md_white_1000" />

</RelativeLayout>